--- a/app/src/main/res/layout/activity_add_person.xml
+++ b/app/src/main/res/layout/activity_add_person.xml
@@ -11,7 +11,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="uk.co.darkruby.bbuddy.birthdaybuddy.AddPerson">
+        tools:context=".AddPersonActivity">
         <EditText
             android:id="@+id/name"
             android:layout_width="match_parent"
@@ -25,11 +25,20 @@
             android:layout_height="wrap_content"
             android:text="Birth date"
             android:layout_below="@+id/name"/>
-        <DatePicker
+
+        <EditText
             android:id="@+id/birthdate"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/title"
-            android:layout_height="wrap_content"/>
+            android:inputType="date"
+            android:hint="dd/mm/yyyy"/>
+
+        <!--<DatePicker-->
+            <!--android:id="@+id/birthdate"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_below="@+id/title"-->
+            <!--android:layout_height="wrap_content"/>-->
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/addbtn"
