--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,13 +12,10 @@
     tools:context="uk.co.darkruby.bbuddy.birthdaybuddy.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Hello World!" />-->
     <ListView
+        android:id="@+id/main_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
     </ListView>
+
 </RelativeLayout>
