--- a/app/src/main/res/layout/activity_add_person.xml
+++ b/app/src/main/res/layout/activity_add_person.xml
@@ -41,6 +41,7 @@
             android:layout_below="@+id/birthdate"
             android:text="Add.."
             android:shadowColor="#222"
+            android:onClick="onAddClick"
             android:background="#ABC"/>
     </RelativeLayout>
 
