--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/add_buddy" />
+        android:src="@drawable/add_buddy"
+        android:onClick="onBuddyAddClick" />
 
 </android.support.design.widget.CoordinatorLayout>
