--- a/app/src/main/res/layout/activity_buddy_details.xml
+++ b/app/src/main/res/layout/activity_buddy_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,9 +9,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="uk.co.darkruby.bbuddy.birthdaybuddy.BuddyDetailsActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/detailsText"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="some text"/>
 
-    </RelativeLayout>
-</ScrollView>
+    <!--<android.support.v4.view.ViewPager-->
+        <!--android:id="@+id/detailsPager"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
+
+</RelativeLayout>
