--- a/app/src/main/res/layout/martian_data.xml
+++ b/app/src/main/res/layout/martian_data.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#ff0000">
+    android:background="@drawable/mars_landscape">
 
     <TextView
         android:layout_width="wrap_content"
