--- a/app/src/main/res/layout/moon_data.xml
+++ b/app/src/main/res/layout/moon_data.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,6 +8,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Moon data"/>
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="@dimen/activity_vertical_margin"
+        android:textColor="#FFF"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textSize="32dp"
+        android:text="Moon age:"/>
 
-</LinearLayout>
+</RelativeLayout>
