--- a/app/src/main/res/layout/cat_data.xml
+++ b/app/src/main/res/layout/cat_data.xml
@@ -3,10 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/moon_landscape">
+    android:background="@drawable/cat_background">
 
     <TextView
-        android:id="@+id/moon_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
@@ -14,7 +13,7 @@
         android:textColor="#FFF"
         android:fontFamily="sans-serif-smallcaps"
         android:textSize="32dp"
-        android:text="Moon age:"/>
+        android:text="Cat age:"/>
 
     <TextView
         android:layout_height="wrap_content"
@@ -24,7 +23,7 @@
         android:layout_marginLeft="@dimen/activity_vertical_margin"
         android:textColor="#fff"
         android:textSize="64dp"
-        android:text="23 Lunar months, in fact it's the same as 23 lunar years"
+        android:text="35 Human years"
         />
 
 </RelativeLayout>
