--- a/app/src/main/res/layout/venus_data.xml
+++ b/app/src/main/res/layout/venus_data.xml
@@ -15,4 +15,15 @@
         android:textSize="32dp"
         android:text="Venus age:"/>
 
+    <TextView
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="@dimen/activity_vertical_margin"
+        android:textColor="#fff"
+        android:textSize="64dp"
+        android:text="23 Venus days\n12 Venus years"
+        />
+
 </RelativeLayout>
