--- a/app/src/main/res/layout/moon_data.xml
+++ b/app/src/main/res/layout/moon_data.xml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/moon_landscape">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="data"
+            type="uk.co.darkruby.bbuddy.birthdaybuddy.BirthdayDataProvider" />
 
-    <TextView
-        android:id="@+id/moon_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/activity_vertical_margin"
-        android:textColor="#FFF"
-        android:fontFamily="sans-serif-smallcaps"
-        android:textSize="32dp"
-        android:text="Moon age:"/>
+    </data>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/moon_landscape">
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/activity_vertical_margin"
-        android:textColor="#fff"
-        android:textSize="64dp"
-        android:text="23 Lunar months, in fact it's the same as 23 lunar years"
+        <TextView
+            android:id="@+id/moon_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:textColor="#FFF"
+            android:fontFamily="sans-serif-smallcaps"
+            android:textSize="32dp"
+            android:text="Moon age:"
         />
 
-</RelativeLayout>
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:textColor="#fff"
+            android:textSize="64dp"
+            android:shadowColor="#000"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="2"
+            android:text="@{data.message, default=NoData}"
+        />
+
+    </RelativeLayout>
+</layout>
