--- a/app/src/main/res/layout/venus_data.xml
+++ b/app/src/main/res/layout/venus_data.xml
@@ -1,29 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/venus_landscape">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="data"
+            type="uk.co.darkruby.bbuddy.birthdaybuddy.BirthdayDataProvider" />
+    </data>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/venus_landscape">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/activity_vertical_margin"
-        android:textColor="#FFF"
-        android:fontFamily="sans-serif-smallcaps"
-        android:textSize="32dp"
-        android:text="Venus age:"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:textColor="#FFF"
+            android:fontFamily="sans-serif-smallcaps"
+            android:textSize="32dp"
+            android:text="Venus age:"/>
 
-    <TextView
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="@dimen/activity_horizontal_margin"
-        android:layout_marginLeft="@dimen/activity_vertical_margin"
-        android:textColor="#fff"
-        android:textSize="64dp"
-        android:text="23 Venus days\n12 Venus years"
-        />
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:textColor="#fff"
+            android:textSize="64dp"
+            android:text="@{data.message, default=NoData}"
+            />
 
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
