--- a/app/src/main/res/layout/martian_data.xml
+++ b/app/src/main/res/layout/martian_data.xml
@@ -23,7 +23,7 @@
             android:textColor="#000"
             android:fontFamily="sans-serif-smallcaps"
             android:textSize="32dp"
-            android:text="Mars age:"
+            android:text="Mars"
         />
 
         <TextView
