--- a/app/src/main/res/layout/venus_data.xml
+++ b/app/src/main/res/layout/venus_data.xml
@@ -19,7 +19,7 @@
             android:textColor="#FFF"
             android:fontFamily="sans-serif-smallcaps"
             android:textSize="32dp"
-            android:text="Venus age:"/>
+            android:text="Venus"/>
 
         <TextView
             android:layout_height="wrap_content"
