--- a/app/src/main/res/layout/moon_data.xml
+++ b/app/src/main/res/layout/moon_data.xml
@@ -21,7 +21,7 @@
             android:textColor="#FFF"
             android:fontFamily="sans-serif-smallcaps"
             android:textSize="32dp"
-            android:text="Moon age:"
+            android:text="Moon"
         />
 
         <TextView
