--- a/app/src/main/res/layout/venus_data.xml
+++ b/app/src/main/res/layout/venus_data.xml
@@ -19,7 +19,7 @@
             android:textColor="#FFF"
             android:fontFamily="sans-serif-smallcaps"
             android:textSize="32dp"
-            android:text="Venus"/>
+            android:text="On Venus"/>
 
         <TextView
             android:layout_height="wrap_content"
@@ -28,6 +28,10 @@
             android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:layout_marginLeft="@dimen/activity_vertical_margin"
             android:textColor="#fff"
+            android:shadowColor="#000"
+            android:shadowDx="2"
+            android:shadowDy="2"
+            android:shadowRadius="2"
             android:textSize="64dp"
             android:text="@{data.message, default=NoData}"
             />
